<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012,2013 Scuola Superiore Sant'Anna (http://www.sssup.it) 
  and Consorzio Nazionale Interuniversitario per le Telecomunicazioni 
  (http://www.cnit.it).
  
  This file is part of Sniffer 15.4, an IEEE 802.15.4 packet sniffer for 
  Android devices.
  
  Sniffer 15.4 is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
   
  Sniffer 15.4 is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
   
  You should have received a copy of the GNU General Public License
  along with Sniffer 15.4.  If not, see <http://www.gnu.org/licenses/>.
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textFileName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expSet" />

    <TextView
        android:id="@+id/textFileNameHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expDefault"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="10sp" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/emptyString"
        android:inputType="textUri" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/buttonExport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expSave" />

    <TextView
        android:id="@+id/dirDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expWhere" />

</LinearLayout>
