<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright (C) 2012,2013 Scuola Superiore Sant'Anna (http://www.sssup.it) 
  and Consorzio Nazionale Interuniversitario per le Telecomunicazioni 
  (http://www.cnit.it).
  
  This file is part of Sniffer 15.4, an IEEE 802.15.4 packet sniffer for 
  Android devices.
  
  Sniffer 15.4 is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
   
  Sniffer 15.4 is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
   
  You should have received a copy of the GNU General Public License
  along with Sniffer 15.4.  If not, see <http://www.gnu.org/licenses/>.
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/prefsCatSnifferSettingsTitle" >
        <it.sssup.rtn.sniffer154.prefs.ChannelPickerPreference
            android:defaultValue="13"
            android:dialogMessage="Choose the 802.15.4 Channel"
            android:key="@string/prefsSniffingChannelKey"
            android:max="26"
            android:summary="802.15.4 Channel"
            android:text="Channel"
            android:title="Channel" />
    </PreferenceCategory>
    <PreferenceCategory android:title="Packet Forwarding" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/prefsForwardingEnableKey"
            android:summary="Enable packet forwarding"
            android:title="Enable Forwarding" />

        <EditTextPreference
            android:dependency="prefsForwardingEnableKey"
            android:key="@string/prefsForwardingAddressKey"
            android:summary="The IP address of the forwarding destination"
            android:title="Forwarding Address"
            android:inputType="textUri" />
        
        <EditTextPreference
            android:dependency="prefsForwardingEnableKey"
            android:key="@string/prefsForwardingPortKey"
            android:summary="The port of the forwarding destination"
            android:title="Forwarding Port"
            android:inputType="number" android:defaultValue="17754"/>
    </PreferenceCategory>

</PreferenceScreen>
