<!--
  Copyright (C) 2012,2013 Scuola Superiore Sant'Anna (http://www.sssup.it) 
  and Consorzio Nazionale Interuniversitario per le Telecomunicazioni 
  (http://www.cnit.it).
  
  This file is part of Sniffer 15.4, an IEEE 802.15.4 packet sniffer for 
  Android devices.
  
  Sniffer 15.4 is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.
   
  Sniffer 15.4 is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
   
  You should have received a copy of the GNU General Public License
  along with Sniffer 15.4.  If not, see <http://www.gnu.org/licenses/>.
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/zero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/table2"
            android:clickable="true"
            android:gravity="center"
            android:text=""
            android:textColor="#000000" />

        <TextView
            android:id="@+id/one"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/table2"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Src"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/two"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/table1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Dst"
            android:textColor="#000000" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/zerozero"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/table2"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/PANID"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/pansrc"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/table1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Hyphen"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/pandst"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/table2"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Hyphen"
            android:textColor="#000000" />
    </TableRow>

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/zeroone"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@color/table2"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/ADDRESS"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/addsrc"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/table1"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Hyphen"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/adddst"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="2"
            android:background="@color/table2"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Hyphen"
            android:textColor="#000000" />
    </TableRow>
</TableLayout>
